# sincFold

./: .gitignore  README.md  demo.ipynb  hubconf.py  pyproject.toml  setup.cfg  setup.py
data/: TR0-TS0_splits.csv  ablation.csv  ablation_splits.csv  benchmarkII.csv  benchmarkII_splits.csv  benchmarkI_splits.csv
results/: TR0-TS0.csv  ablation.csv  bpRNA.csv  summary.ipynb
sample/: test.csv  test.fasta  train.csv
src/sincfold/: __init__.py  dataset.py  embeddings.py  metrics.py  model.py  parser.py  utils.py
src/sincfold/tools/RNAstructure/: Readme.md  draw
src/sincfold/tools/ct2dot/: ct2dot
src/sincfold/tools/ct2dot/data_tables/: README.md
src/sincfold/tools/varna/: Readme.md
