[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sincfold"
version = "0.9" 
authors = [
  {name="Leandro Bugnon", email="lbugnon@sinc.unl.edu.ar"}]
description = "An end-to-end method to predict RNA secondary structure based on deep learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "pandas",
  "numpy",
  "scikit-learn",
  "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/sinc-lab/sincfold"
"Bug Tracker" = "https://github.com/sinc-lab/sincfold/issues"

[project.scripts]
sincFold = "sincfold:main"