[metadata]
name = sincfold
version = 0.1
author = lbugnon
author_email = lbugnon@sinc.unl.edu.ar
description = An end-to-end method to predict RNA secondary structure based on deep learning 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = RNA, structure prediction, bioinformatics, deep learning 
url = https://github.com/sinc-lab/sincfold
project_urls =
    Bug Tracker = https://github.com/sinc-lab/sincfold/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    torch
    pandas
    numpy
    scikit-learn
    tqdm
scripts =
    bin/sincFold

[options.packages.find]
where = src